--- a/src/Modules/Scholarship/convenor/components/spacsMembersC.module.css
+++ b/src/Modules/Scholarship/convenor/components/spacsMembersC.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100%; /* Take full width to ensure space for the grid */
+  width: 100%;
   padding-left: 1rem;
 }
 
@@ -11,8 +11,8 @@
 
 .membersContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  gap: 1rem; /* Gap between cards */
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
   border-top: 2px solid #17ABFF;
   padding-top: 1rem;
 }
@@ -21,8 +21,7 @@
   border: 1px solid black;
   border-radius: 0.375rem;
   padding: 1rem;
-  width: 80%;
-  /* min-width: 250px; */
+  width: 100%;
 }
 
 .cardHeading {
@@ -43,7 +42,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 0.5rem;
-  margin-bottom: 0.25rem; /* Reduced gap between name and role */
+  margin-bottom: 0.25rem;
   font-size: 14px;
 }
 
@@ -61,30 +60,44 @@
 }
 
 .icon {
-  color: #17ABFF; /* Blue icon color */
+  color: #17ABFF;
 }
 
 .contactInfo {
   display: flex;
   align-items: center;
-  gap: 0.5rem; /* Gap between icon and label */
+  gap: 0.5rem;
   margin-bottom: 0.5rem;
   font-size: 14px;
 }
 
 .contactLabel {
-  margin-right: 0.5rem; /* Space between label and value */
+  margin-right: 0.5rem;
 }
 
 /* Responsive breakpoints */
+@media (max-width: 1440px) {
+  .memb {
+    height: 10rem; /* Reduce image height for laptop views */
+  }
+}
+
 @media (max-width: 1024px) {
   .membersContainer {
-    grid-template-columns: repeat(2, 1fr); /* 2 columns for medium screens */
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .memb {
+    height: 9rem; /* Further reduce image height for medium screens */
   }
 }
 
 @media (max-width: 768px) {
   .membersContainer {
-    grid-template-columns: 1fr; /* 1 column for small screens */
+    grid-template-columns: 1fr;
+  }
+
+  .memb {
+    height: 8rem; /* Adjust image size for small screens */
   }
 }
